apps/slides/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slides
  labels:
    app: slides
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: slides
  template:
    metadata:
      labels:
        app: slides
    spec:
      containers:
        - name: slides
          image: npastorale/slides@sha256:e5b2fcd95e7a65668681f99de3561bb0dbef0a65df7de4b67659047050975345
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "1"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
