apps/slides/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slides
spec:
  type: ClusterIP
  selector:
    app: slides
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
